--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -32,7 +32,7 @@
 
 .wrapper{
     margin: 0;
-    background-color: var(--yellow-color);
+    background-color: var(--orange-color);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -49,7 +49,7 @@
     left: 0px;
     top: 56px;
     @media (min-width: 1000px) {
-        width: 70%;
+        width: 1200px;
     }
 }
 
