--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -32,7 +32,7 @@
 
 .wrapper{
     margin: 0;
-    background-color: var(--orange-color);
+    background-color: var(--yellow-color);
     display: flex;
     flex-direction: column;
     align-items: center;
