--- a/src/pages/StickerView/StickerView.module.css
+++ b/src/pages/StickerView/StickerView.module.css
@@ -4,3 +4,9 @@
     border: solid 1px black;
     background-color: #E6C1EB;
 }
+.CardTextWrapper {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
