--- a/src/pages/UserLog/UserLog.module.css
+++ b/src/pages/UserLog/UserLog.module.css
@@ -1,29 +1,25 @@
-h2{
-    font-family: 'KyoboHand';
-    color: var(--point-brown-color);
-}
-
 .wrapper{
     margin: 0;
-    background-color: var(--yellow-color);
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
 }
 
 .wrapper .header{
     height: 55px;
     width: 100%;
+    position: fixed;
 }
 
 .container{
     background-color: white;
-    display: flex;
+    /* display: flex; */
     width: 100%;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
     padding: 35px 0px 30px;
-    margin-top: 35px;
+    margin-top: 100px;
     gap: 15px;
     height: 100%;
     border-radius: 50px 50px 0 0;
@@ -31,23 +27,28 @@ h2{
         width: 1200px;
     }
 }
+h2{
+    font-family: 'KyoboHand';
+    font-weight: 400;
+    color: var(--point-brown-color);
+    text-align: center;
+    margin-top: -25px;
 
-.topWrapper{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between; 
 }
 .buttons{
     width: 20px;
     height: 20px;
+    margin-left: 20px;
 }
 .button{
     width: 100%;
     height: 100%;
     color: var(--point-brown-color);
 }
-
 .postContainer{
-    margin-top: 20px;
+    margin-top: 55px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
