--- a/src/pages/UserPage/UserPage.module.css
+++ b/src/pages/UserPage/UserPage.module.css
@@ -44,7 +44,6 @@ img.userIcon{
     height: 175px;
     color: var(--text-brown-color);
 }
-
 .userLogContainer{
     display: flex;
     align-items: center;
@@ -57,8 +56,36 @@ h4.todayDate{
     font-size: 16px;
     font-weight: 600;
 }
+.cardContent{
+    width: 320px;
+    font-size: 16px;
+    max-height: calc(16px * 4); 
+    overflow: hidden; 
+    margin-top: 10px;
+}
 .cardContent h5{
     font-family: 'Pretendard';
-    color: #51372B;
+    color: var(--text-brown-color);
     font-weight: 400;
+    font-stretch: -3%;
+}
+.moveButton{
+    width: 55px;
+    margin-top: 15px;
+    border-radius: 20px;
+    background-color: var(--theme-yellow-color);
+    border: 1px #713c00bd solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    text-decoration-line: none;
+}
+.moveButton h5{
+    align-items: center;
+    justify-content: center;
+    font-family: 'KyoboHand';
+    font-size: 12px;
+    color: var(--point-brown-color);
+    font-weight: 300;
 }
