--- a/src/components/UserTextCard/UserTextCard.module.css
+++ b/src/components/UserTextCard/UserTextCard.module.css
@@ -7,7 +7,7 @@
 
 .profile {
     width: 100%;
-    border-bottom: #9E8669 1px solid;
+    border-bottom: rgba(158, 134, 105, .5) 1px solid;
     display: flex;
     justify-content: space-between;
 }
