--- a/src/pages/UserLog/UserLog.module.css
+++ b/src/pages/UserLog/UserLog.module.css
@@ -3,20 +3,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    min-height: 100vh;
 }
 
-.wrapper .header{
+.header{
     height: 55px;
     width: 100%;
     position: fixed;
+    top: 0; 
+    z-index: 9999;
 }
 
 .container{
     background-color: white;
-    /* display: flex; */
     width: 100%;
-    /* flex-direction: column; */
     align-items: center;
     padding: 35px 0px 30px;
     margin-top: 100px;
@@ -26,6 +26,8 @@
     @media (min-width: 1000px) {
         width: 1200px;
     }
+    flex: 1;
+    
 }
 h2{
     font-family: 'KyoboHand';
