--- a/src/pages/MainPage/MainPage.module.css
+++ b/src/pages/MainPage/MainPage.module.css
@@ -1,12 +1,10 @@
 .title {
     height: 40%;
-    background-color: #FFEBA4;
     min-height: 300px;
 }
 .wave {
     width: 100%;
     height: 30px;
-    background-color: #FFEBA4;
     background-repeat: repeat;
     background-image: url("/src/assets/wave.svg");
 }
@@ -28,6 +26,7 @@
 }
 
 .wrap {
+    width: 100%;
     height: 100%;
 }
 .bodyWrap {
@@ -41,7 +40,6 @@
     justify-content: center;
     padding-bottom: 30px;
     width: auto;
-    background-color: #FFFEFC;
 }
 .filter {
     margin: 12px 0 8px auto;
