--- a/src/components/TextCard/TextCard.module.css
+++ b/src/components/TextCard/TextCard.module.css
@@ -1,8 +1,15 @@
-
+@font-face {
+    font-family: 'Pretendard';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
 .CardText {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    font-size: 16px;
+    font-family: 'Pretendard';
 }
 
 .Wrapper {
