--- a/src/components/UserTextCard/UserTextCard.module.css
+++ b/src/components/UserTextCard/UserTextCard.module.css
@@ -1,8 +1,11 @@
 .wrap {
     width: 350px;
     max-height: 160px;
-    margin: 25px;
+    margin: 10px;
     background-color: #FFFEFC;
+    border: solid 1px #713D00;
+    border-radius: 10px;
+    padding: 15px 25px;
 }
 
 .profile {
