--- a/src/pages/MainPage/MainPage.module.css
+++ b/src/pages/MainPage/MainPage.module.css
@@ -39,7 +39,13 @@ button{
     background-color: #ffff;
     border-style: none;
 }
-
+.editBox{
+    /* height: 81px;
+    width: 218px; */
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
 .wrap {
     width: 100%;
     height: 100%;
