--- a/src/components/TextCard/TextCard.module.css
+++ b/src/components/TextCard/TextCard.module.css
@@ -11,7 +11,36 @@
     font-size: 16px;
     font-family: 'Pretendard';
 }
+.editBox{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    font-size: 16px;
+    font-family: 'Pretendard';
+}
 
+button{
+    display: none;
+}
+.Wrapper:hover button{
+    display: block;
+}
+.editBtn{
+    background-image: url(/src/assets/edit.svg);
+    background-repeat: no-repeat;
+    width: 15px;
+    height: 15px;
+    background-color: #ffffff;
+    border-style: none;
+}
+.saveBtn{
+    background-image: url(/src/assets/edit.svg);
+    background-repeat: no-repeat;
+    width: 15px;
+    height: 15px;
+    background-color: #ffffff;
+    border-style: none;
+}
 .Wrapper {
     width: 321px;
     height: 186px;
