--- a/src/components/TextCard/TextCard.module.css
+++ b/src/components/TextCard/TextCard.module.css
@@ -42,3 +42,26 @@
 .Wrapper:hover .saveBtn{ 
     display: block;
 }
+
+.editBox::-webkit-scrollbar {
+    width: 10px;
+}
+.editBox::-webkit-scrollbar-thumb {
+    background-color: rgba(113,61,0,0.7);
+    border-radius: 10px;
+}
+.editBox::-webkit-scrollbar-track {
+    background-color: rgba(113, 61, 0, 0.3);
+    border-radius: 8px;
+}
+.editBox:focus{
+    outline: none;
+}
+
+.editBox {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    font-size: 16px;
+    font-family: 'Pretendard';
+}
