--- a/src/components/TextCard/TextCard.module.css
+++ b/src/components/TextCard/TextCard.module.css
@@ -5,20 +5,25 @@
     font-style: normal;
 }
 .CardText {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+    /* width: 100%; */
+    /* height: 100%; */
+    /* overflow: hidden; */
     font-size: 16px;
     font-family: 'Pretendard';
 }
 .Wrapper {
     width: 321px;
-    height: 186px;
+    /* height: 186px; */
     background-color: #FFFDF8;
     border-radius: 26px / 26px;
     padding: 36px 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 .editBtn{
+    margin-top: 10px;
     display: none;
     background-image: url('/src/assets/edit.svg');
     background-repeat: no-repeat;
@@ -28,6 +33,7 @@
     border-style: none;
 }
 .saveBtn{
+    margin-top: 10px;
     display: none;
     background-image: url('/src/assets/edit-save.svg');
     background-repeat: no-repeat;
@@ -42,9 +48,23 @@
 .Wrapper:hover .saveBtn{ 
     display: block;
 }
+.editBox {
+    width: 321px;
+    background-color: #FFFDF8;
+    border-radius: 26px / 26px;
+    resize: none;
+    padding: 36px 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    outline: none;
+    border: none;
 
+}
 .editBox::-webkit-scrollbar {
     width: 10px;
+    margin-right: 10px;
 }
 .editBox::-webkit-scrollbar-thumb {
     background-color: rgba(113,61,0,0.7);
@@ -56,12 +76,6 @@
 }
 .editBox:focus{
     outline: none;
+    border: none;
 }
 
-.editBox {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    font-size: 16px;
-    font-family: 'Pretendard';
-}
